include $(top_srcdir)/build/Makefile.am.common

SUBDIRS=		cpml \
			adg

EXTRA_DIST=		common/devhelp2.xsl \
			common/docbook2txt.xsl \
			common/gtk-doc.xsl \
			common/home.png \
			common/left.png \
			common/right.png \
			common/style.css \
			common/up.png \
			common/version-greater-or-equal.xsl
